Slightly better truncation of the gigantic log file names. Also, a fix to remove the paging controls when < 10 items

--- a/SingularityUI/app/styles/table.styl
+++ b/SingularityUI/app/styles/table.styl
@@ -59,6 +59,17 @@
     .icon
         margin-right 10px
 
+    th.half-table
+        width: 50%
+
+    a.long-link
+        max-width: 40em
+        display: inline-block
+        white-space: nowrap
+        text-overflow: ellipsis
+        overflow: hidden
+        line-height: 18px
+
 .empty-table-message
     text-align center
     border 3px dashed #e7e7e7
